--- a/src/Palette.css
+++ b/src/Palette.css
@@ -12,6 +12,7 @@
   background-color: white;
   height: 5vh;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
   font-weight: bold;
 }
